Separando spring-data de spring-core Ajustando pesquisa por reflexão. Adicionando pesquisa por subinterfaces